fix: scroll issue on small height screens

--- a/src/styles/components/side-pane.scss
+++ b/src/styles/components/side-pane.scss
@@ -1,13 +1,14 @@
 @import '../components/button.scss';
 
-.gui-side-pane {
-  width: 30rem;
-  max-width: 30rem;
-  height: 100%;
-  padding: 1rem;
-  overflow: scroll;
-  position: relative;
-  box-shadow: 4px 4px 20px 0px rgba(0, 0, 0, 0.2);
+.gui-side-pane-not-selected {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+
+  .gui-elements-list {
+    overflow: scroll;
+    padding: 1rem;
+  }
 
   .gui-side-pane-footer {
     display: flex;
@@ -15,9 +16,6 @@
     justify-content: center;
     padding: 1rem;
     background: #e5e5e5;
-    position: absolute;
-    bottom: 0;
-    left: 0;
 
     a {
       display: inline-flex;
@@ -39,6 +37,18 @@
       }
     }
   }
+}
+
+.gui-side-pane-selected {
+  padding: 1rem;
+}
+
+.gui-side-pane {
+  width: 30rem;
+  max-width: 30rem;
+  height: 100%;
+  overflow: scroll;
+  box-shadow: 4px 4px 20px 0px rgba(0, 0, 0, 0.2);
 
   .gui-elements-pane-separator {
     display: block;
